# the-sqisign-vectorization

./: README.md  force.txt
src/ec/ref/: lvlx.cmake  lvlx_test.cmake
src/ec/ref/lvlx/: ec_jac.c
src/hd/ref/include/: hd.h
the-sqisign-qla-vec/: README.md
the-sqisign-qla-vec/.cmake/: flags.cmake  target.cmake
the-sqisign-qla-vec/apps/: benchmark.c
the-sqisign-qla-vec/src/: sqisign.c
the-sqisign-ref-vec/: CMakeLists.txt  README.md
the-sqisign-ref-vec/.cmake/: flags.cmake  impl_type.cmake  target.cmake
the-sqisign-ref-vec/apps/: benchmark.c
the-sqisign-ref-vec/include/: sqisign_namespace.h
the-sqisign-ref-vec/src/: CMakeLists.txt  sqisign.c
the-sqisign-ref-vec/src/ec/ref/: lvlx.cmake
the-sqisign-ref-vec/src/ec/ref/include/: ec.h
the-sqisign-ref-vec/src/ec/ref/lvlx/: basis.c  ec.c  isog_chains.c
the-sqisign-ref-vec/src/gf/broadwell/lvl1/: fp_asm.S
the-sqisign-ref-vec/src/gf/ref/: lvlx.cmake
the-sqisign-ref-vec/src/gf/ref/include/: fp.h  fp2.h
the-sqisign-ref-vec/src/gf/ref/lvl1/: fp2_p5248_asm.S  fp_p5248_64.c  fp_p5248_asm.S
the-sqisign-ref-vec/src/gf/ref/lvl3/: CMakeLists.txt  fp2_p65376_asm.S  fp_p65376_64.c  fp_p65376_asm.S
the-sqisign-ref-vec/src/gf/ref/lvl5/: CMakeLists.txt  fp2_p27500_asm.S  fp_p27500_asm.S
the-sqisign-ref-vec/src/gf/ref/lvlx/: fp.c  fp2.c  fp_asm.S
the-sqisign-ref-vec/src/hd/ref/: lvlx.cmake
the-sqisign-ref-vec/src/hd/ref/include/: hd.h
the-sqisign-ref-vec/src/hd/ref/lvl1/: CMakeLists.txt  hd_p5248.c
the-sqisign-ref-vec/src/hd/ref/lvl3/: CMakeLists.txt  hd_p65376.c
the-sqisign-ref-vec/src/hd/ref/lvl5/: CMakeLists.txt  hd_p27500.c
the-sqisign-ref-vec/src/hd/ref/lvlx/: hd.c  theta_isogenies.c  theta_isogenies.h  theta_structure.c  theta_structure.h
the-sqisign-ref-vec/src/id2iso/ref/lvlx/: id2iso.c
the-sqisign-ref-vec/src/precomp/ref/lvl1/include/: fp_constants.h
the-sqisign-ref-vec/src/precomp/ref/lvl3/include/: fp_constants.h
the-sqisign-ref-vec/src/precomp/ref/lvl5/include/: fp_constants.h
the-sqisign-ref-vec/src/signature/ref/include/: signature.h
the-sqisign-ref-vec/src/signature/ref/lvlx/: keygen.c
the-sqisign-ref-vec/src/signature/ref/lvlx/test/: bench_signature.c  test_signature.c  test_threadsafety.c
the-sqisign-ref-vec/test/: CMakeLists.txt
(+44 files in other folders)
